# pcl_pattern_matching

./: .clang-format  CMakeLists.txt  README.md  package.xml
config/: PatternMatchingParameters.cfg  WallDetectionParameters.cfg
include/pcl_pattern_matching/: Global2Local.hpp  MatchingParameters.hpp  PCLUtil.hpp  PatternMatching.hpp  Util.hpp  WallDetection.hpp
resources/: wall_pattern.ply  wall_pattern.stl  wall_pattern_single.ply  wall_pattern_thin.stl  wall_pattern_upscaled.ply
src/: PatternMatchingNode.cpp  WallDetectionNode.cpp
